overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
 }
 
 .main {
+  height: 100%;
   margin: 0;
   padding: 0;
   /* Adjust the path accordingly */
